sddm-config (0.1.3)  nitrux; urgency=medium

  * Use new wayland session file name.

 -- Uri Herrera <uri_herrera@nxos.org>  Tue, 27 May 2025 23:40:00 -0500

sddm-config (0.1.2)  nitrux; urgency=medium

  * Enable rootless Wayland for SDDM.

 -- Uri Herrera <uri_herrera@nxos.org>  Sat, 25 Jan 2025 01:19:00 -0500

sddm-config (0.1.1)  nitrux; urgency=medium

  * Enable PAM authentication in SDDM to use fingerprint readers.

 -- Uri Herrera <uri_herrera@nxos.org>  Thu, 23 Dec 2025 18:35:00 -0500

sddm-config (0.1.0)  nitrux; urgency=medium

  * Split displayserver files.

 -- Uri Herrera <uri_herrera@nxos.org>  Wed, 30 Oct 2024 19:27:00 -0500

sddm-config (0.0.9)  nitrux; urgency=medium

  * Centralize SDDM DisplayServer settings.
  * Fix typos.

 -- Uri Herrera <uri_herrera@nxos.org>  Sun, 27 Oct 2024 15:14:00 -0500

sddm-config (0.0.8)  nitrux; urgency=medium

  * Usae rootless X11.

 -- Uri Herrera <uri_herrera@nxos.org>  Sun, 27 Oct 2024 06:09:00 -0500

sddm-config (0.0.7)  nitrux; urgency=medium

  * Disable use rootless Wayland for SDDM but keep the configuration file.

 -- Uri Herrera <uri_herrera@nxos.org>  Sun, 27 Oct 2024 03:25:00 -0500

sddm-config (0.0.6)  nitrux; urgency=medium

  * Default to use rootless Wayland for SDDM.
  * Move all configuration files to etc/sddm.conf.d

 -- Uri Herrera <uri_herrera@nxos.org>  Tue, 22 Oct 2024 19:47:00 -0500

sddm-config (0.0.5)  nitrux; urgency=medium

  * FFS.

 -- Uri Herrera <uri_herrera@nxos.org>  Wed, 17 May 2023 20:47:00 -0500

sddm-config (0.0.4)  nitrux; urgency=medium

  * Make sddm.conf immutable.

 -- Uri Herrera <uri_herrera@nxos.org>  Wed, 17 May 2023 18:40:00 -0500

sddm-config (0.0.3)  nitrux; urgency=medium

  * Default to plasma wayland session.

 -- Uri Herrera <uri_herrera@nxos.org>  Wed, 17 May 2023 15:00:00 -0500

sddm-config (0.0.2)  nitrux; urgency=medium

  * Hope to god that SDDM respects its fucking config file.

 -- Uri Herrera <uri_herrera@nxos.org>  Mon, 14 Mar 2022 13:14:00 -0500
