@@ -1,4 +1,4 @@
-Source: sddm-config
+Source: nx-sddm-settings
 Section: misc
 Priority: optional
 Maintainer: Uri Herrera <uri_herrera@nxos.org>
@@ -7,7 +7,7 @@ Standards-Version: 3.9.6
 Homepage: http://nxos.org
 
 
-Package: sddm-config
+Package: nx-sddm-settings
 Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Defaults settings for SDDM
