@@ -1,3 +1,3 @@
 [Last]
-# This will manipulate SDDM into setting Plasma as the preselected session
+#  Set a session as "last used" in SDDM.
 Session=/usr/share/wayland-sessions/plasma.desktop
