@@ -1,3 +1,9 @@
+nx-sddm-settings (0.1.4)  nitrux; urgency=medium
+
+  * Rename package.
+
+ -- Uri Herrera <uri_herrera@nxos.org>  Tue, 10 Jun 2025 19:43:00 -0500
+
 sddm-config (0.1.3)  nitrux; urgency=medium
 
   * Use new wayland session file name.
